[project]
name = "url-spewderman"
version = "0.1.0"
description = "we crawling urls like a spewderman dude !!!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["crawl4ai>=0.7.8", "playwright>=1.57.0", "reposcribe>=0.2.6"]

[project.scripts]
input = "crawler.cli:app"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
